TestSuite/errors/err0416.pas
//!Параметр метода не может иметь имя Self
type
  T = class
    public procedure p(self: integer) := exit;
  end;

begin
end.